--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>    
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#loginmodal">
                     <span class="fa fa-sign-in"></span> Login</a>
                 </span>        
         </div>
