--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
                 <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </a>
+                <div class="btn-group" id="carouselButton">
+
+                    <button class="btn btn-danger btn-sm" id="carousel-pause">
+                	    <span class="fa fa-pause"></span>
+                    </button>
+                    <button class="btn btn-danger btn-sm" id="carousel-play">
+                	    <span class="fa fa-play"></span>
+                    </button>
+                </div>
               </div>
          </div>
         <div class="row row-content align-items-center">
@@ -317,6 +326,21 @@
      <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+     <script>
+              $(document).ready(function(){
+                  $('#mycarousel').carousel( { interval:2000});
+
+                  $('#carousel-pause').click(function(){
+                      $('#mycarousel').carousel('pause');
+                  });
+
+                  $('#carousel-play').click(function(){
+                      $('#mycarousel').carousel('cycle');
+                  });
+
+
+              });
+     </script>
     
 
 </body>
